--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ vt = 1
 
 [initial_session]
 command = "Hyprland"
-user = "cooperbousum"
+user = "[change to your user]"
 
 # The default session, also known as the greeter.
 [default_session]
